fixed scrollbar bug

--- a/assets/index.CSS
+++ b/assets/index.CSS
@@ -5,25 +5,25 @@ body{
     background: #F56B11;
     overflow-anchor: none;
 }
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
     width: 11px;
     background:#F56B11
   }
   
   /* Track */
-  ::-webkit-scrollbar-track {
+  body::-webkit-scrollbar-track {
     background: #ffffff6a;
   }
   
   /* Handle */
-  ::-webkit-scrollbar-thumb {
+  body::-webkit-scrollbar-thumb {
     background: #ffffffce;
     
     
   }
   
   /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+  body::-webkit-scrollbar-thumb:hover {
     background: rgb(255, 255, 255);
   }
   
